# teca-api

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Dockerfile.app  README.md  TODOs  app.py  class.txt  compose-develop.yml  docker-compose.yml  notes.txt  prompt.txt  pyproject.toml  requirements-freeze.txt  requirements.txt  run.py  settings.toml  template_maker.py  test.http
app/: __init__.py  asgi.py  config.py
app/api/auth/: __init__.py  auth.http  auth_controller.py  auth_model.py  auth_models.py  auth_routes.py  auth_schemas.py  auth_services.py  decorators.py  schemas.py  services.py  user_model.py  utils.py
app/api/common/: config.py  field_transformer.py
app/api/controllers/: address_controller.py  bank_account_controller.py  clothing_controller.py  (+8 more)
app/common/: __init__.py  base_schema.py  common_schema.py  config.py  crypto_utils.py  custom_exceptions.py  datetime_utils.py  envs.py  filter_utils.py  hash_utils.py  validation_helpers.py
app/database/: config.py  db.py  db_manager.py
app/decorators/: response_handler_decorator.py  route_validations_decorator.py  service_error_handler_decorator.py
app/ultilities/: __init__.py
app/utils/: response.py  utils.py  validators.py
docker-compose/: init.sql
docker-compose/postgres/: init.sql
docs/models/: README.md
docs/repositories/: README.md
scripts/: postgres.sh
tests/: meta-api.json
tests/json/: user_data.json
tests/rest-client/: address.http  auth.http  bank_account.http  clothing.http  contact.http  employee.http  function.http  reminder.http  user.http  vacancy.http
(+261 files in other folders)
