[tool.poetry]
name = "app"
version = "0.1.0"
description = "A Quart api"
authors = ["Kalwe Caramalac <kalwe.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.18.4"
werkzueg = "2.3.7"
dynaconf = "3.1.12"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
config_file = "mypy.ini"
ignore_missing_imports = true
